--- a/cosmology/relativistic quantum mechanics/particle physics/relativity/limitations-of-schrodinger/index.html
+++ b/cosmology/relativistic quantum mechanics/particle physics/relativity/limitations-of-schrodinger/index.html
@@ -879,8 +879,7 @@ And who knows, maybe if you can figure out a way to solve problems the same way 
   </p>
 
 
-    <p class="archive__item-excerpt" itemprop="description">Introduction
-
+    <p class="archive__item-excerpt" itemprop="description">A subtle shift in hydrogen’s energy levels cracked open the door to quantum field theory — revealing the dynamic, buzzing vacuum inside every atom.
 </p>
   </article>
 </div>
