--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
   </p>
 
 
-    <p class="archive__item-excerpt" itemprop="description">Introduction
-
+    <p class="archive__item-excerpt" itemprop="description">A subtle shift in hydrogen’s energy levels cracked open the door to quantum field theory — revealing the dynamic, buzzing vacuum inside every atom.
 </p>
   </article>
 </div>
