--- a/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
+++ b/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
@@ -254,7 +254,7 @@
 
 <p>Today we will unravel the fact that in physics, there is no such thing as empty space. What we like to call “empty” is teeming with activity and fluctuations at the quantum scales. This is not just theory, but has measurable consequences, all of which we will get into as we go forward, so enjoy the adventure. You will need a grasp of basic Quantum Mechanics, Electromagnetic Thoery and a bit of Atomic and Moledular Physics to go with that.</p>
 
-<p>Our understanding of the atom was a hot topic for physicists in the early 1900s, with J.J Thompsons famous “fruitcake” model, where the atom was assumed to be a smooth and filled sphere of positive charge, with clumps of negative charges embeeded in it.  In 1911, Earnest Rutherford devised the most accurate atomic model known to man, backed by an experiment, where a minority of alpha particles were observed to scatter off at large angles when targeted at a thin foil of gold. This showed that an atom was mostly empty space with a lot of its mass being concentrated at the center, leading to such dramatic scattering. This center with positive charge is known as a nucleus, with negative electrons orbiting around it.</p>
+<p>Our understanding of the atom was a hot topic for physicists in the early 1900s, with J.J Thompson’s famous “fruitcake” model, where the atom was assumed to be a smooth and filled sphere of positive charge, with clumps of negative charges embedded in it.  In 1911, Ernest Rutherford devised the most accurate atomic model known to man, backed by an experiment, where a minority of alpha particles were observed to scatter off at large angles when targeted at a thin foil of gold. This showed that an atom was mostly empty space with a lot of its mass being concentrated at the center, leading to such dramatic scattering. This center with positive charge is known as a nucleus, with negative electrons orbiting around it.</p>
 
 <h2 id="the-empty-space-in-an-atom">The Empty Space in an Atom</h2>
 
@@ -264,7 +264,7 @@
 
 <p>This tell us that the atom is almost completely empty. To  give you an idea of the magnitude of this ratio, its like if the atom was the size of a football field, the nucleus would be a cherry placed in its center. Now, let’s dive into the deep end. If I claimed that there is no such thing as empty space, that what is actually going on in that space?</p>
 
-<p>To understand this, we will view the atom from the lens of Quantum Field Thoery (QFT).</p>
+<p>To understand this, we will view the atom from the lens of Quantum Field Theory (QFT).</p>
 
 <h2 id="the-behaviour-of-the-electrons">The Behaviour of the Electrons</h2>
 
@@ -280,13 +280,15 @@
 
 \[\Delta p \Delta x \geq \frac{\hbar}{2}\]
 
-<p>So if an electron is constrained to a small enough space, relativistic effects become dominant. In such a case, the energy is given by:</p>
+<p>So if an electron is constrained to a small enough space, relativistic effects become dominant. In such a case, the characteristic energy can be approximated as:</p>
 
-\[E=\Delta pc=mc^2\]
+\[E \approx \Delta pc \approx mc^2\]
 
 \[\frac{\hbar c}{2\Delta x}=mc^2\]
 
-\[\Delta x=\frac{\hbar}{2m_ec} \approx 10^{-12}m\]
+\[\Delta x=\frac{\hbar}{2m_ec} \approx 10^{-13}m\]
+
+<p>So this means that if I were to constrain anything within \(10^{-13}m\), which is the case in an aton, the correct characteristic energy can match a critical value of 1.02 MeV, which is the energy required to produce the positron-electron pair, setting the stage for jitters within the atom.</p>
 
 <p>It becomes apparent that this length is bigger than the radius of the nucleus but smaller then that of the atom, hence making the “empty” space inside the atom an ideal environment for effects to occur. So, we have seen that in the case of an atom, the electron can be confined to a region where the quantum mechanical picture becomes fuzzy. Beyond this, ordinary quantum mechanics breaks down, and we require another way to understand the atom. This is where Quantum Field Theory (QFT) can play a part, but do not be overwhelmed by the fancy name…it is a lot more simple than it sounds. In the QFT interpretation, fields are fundamental, not particles. Particles are simply localized excitation in fields that permeate through space. Using QFT allows us to study the atom from a field perspective, which aids in making sense of the situation. In order to detect the consequences of the restless empty space on atomic energies, we need to determine a consequence of these quantum effects. To detect QFT’s effects, we first need to establish what happens without them.</p>
 
@@ -296,7 +298,7 @@
 
 \[E = -\frac{1}{2} \cdot \frac{m_e e^4}{(4\pi \varepsilon_0)^2 \hbar^2}=-13.6 eV\]
 
-<p>The full derivation of this is the topic for another blog, but for now, trust me on this. Note that this is the picture without QFT, since the Schrodinger equation is non-relatvistic, as explained in the first blog of this series. For the confined particle, if we take the assumption that \(\psi\) vanishes at the edges, the allowed wavelengths are given by:</p>
+<p>The full derivation of this is the topic for another blog, but for now, trust me on this. Note that this is the picture without QFT, since the Schrodinger equation is non-relativistic, as explained in the first blog of this series. For the confined particle, if we take the assumption that \(\psi\) vanishes at the edges, the allowed wavelengths are given by:</p>
 
 \[\lambda_n=\frac{2L}{n}\]
 
@@ -313,8 +315,7 @@
 \[\omega_k=2 \pi f=\frac{2 \pi c}{\lambda}=kc\]
 
 <h2 id="the-qft-treatment">The QFT Treatment</h2>
-
-<p>In QFT, each mode is treated as a quantum harmonic oscillator and the minimum energy in such a case is, unlike classical oscillators, non zero due to the Heisenberg Uncertainty Principle. The minimum energy of each mode is given by: 
+<p>To understand what’s happening in that ‘empty’ space, we need to shift our view from waves to fields, and this is where QFT shines. In QFT, each mode is treated as a quantum harmonic oscillator and the minimum energy in such a case is, unlike classical oscillators, non zero due to the Heisenberg Uncertainty Principle. The minimum energy of each mode is given by: 
 \(E_{min}=\frac{\hbar\omega}{2}\)</p>
 
 <p>So we can see that by incorporating QFT, these modes that make up the vacuum give rise to vacuum energy, due to quantum fluctuations. This bold prediction is made possible by the QFT treatment. Analyzing the effect due to one mode, we combine the previous 2 equations to get:</p>
@@ -341,7 +342,7 @@
 
 \[\epsilon_k=\sqrt{\frac{\hbar ck}{\epsilon_0 a^3}}\]
 
-<p>We now observe, from the QFT perspective,  that every mode trembles with its own electric field. Note that in QFT, there are infinite amount of modes and each one contributes its own effects, in a vacuum, oblivious to the presence or absence of particles. Now the idea of empty space, not being empty starts to make sense, but we are not finished. Each mode within the Hydrogen atom, influences the electron, not by much alone, but the effects add up. This also changes the probability distribution of the electron, and this is something we can pick up despite its subtlety.</p>
+<p>We now observe, from the QFT perspective,  that every mode trembles with its own electric field. Note that in QFT, there are infinite amount of modes and each one contributes its own effects, in a vacuum, oblivious to the presence or absence of particles. Now the idea of empty space not being empty starts to make sense, but we are not finished. Each mode within the Hydrogen atom, influences the electron, not by much alone, but the effects add up. This also changes the probability distribution of the electron, and is something we can pick up despite its subtlety.</p>
 
 <h2 id="the-lamb-shift">The Lamb Shift</h2>
 
@@ -367,7 +368,7 @@
 
 \[s_k=\frac{e\epsilon_k\pi^2}{2m_ec^2k^2}=\frac{e\pi^2}{2m_ec^2k^2}\sqrt{\frac{\hbar ck}{\epsilon_0 a^3}}=\frac{e\pi^2}{2m_e c^2 k^{3/2}} \left( \frac{\hbar c}{\varepsilon_0 a^3} \right)^{1/2}\]
 
-<p>Now we can calculate the summed up effects on displacement, doe to all the modes. Since these modes are not correlated with each other, we can sum the mean square displacement. The summation takes the following form over k-space:</p>
+<p>Now we can calculate the summed up effects on displacement, due to all the modes. Since these modes are not correlated with each other, we can sum the mean square displacement. The summation takes the following form over k-space:</p>
 
 \[s^2=\sum_k (s_k^2)\]
 
@@ -387,7 +388,7 @@
 
 \[s^2=\frac{\pi^2\hbar e^2}{8m^2\epsilon_0c^3}\int_k\frac{1}{k}dk\]
 
-<p>If we are not careful, and integrate from zero to infinity, we could get unphysical answers. Therefore, we are going to integrate over the cut-off limits, since not all modes can interact with the electron. We deploy the IR-UV (Infrared-UltraViolet) cutoffs, since modes smaller than the IR modes are have wavelengths too high to perturb the electron and modes greater than the UV modes, have wavelengths that are too small compared to the atoms, which means that the idea of small perturbations on the electrons no longer apply. We define the cutoffs as:</p>
+<p>If we are not careful, and integrate from zero to infinity, we could get unphysical answers. Therefore, we are going to integrate over the cut-off limits, since not all modes can interact with the electron. We introduce the IR-UV (Infrared-UltraViolet) cutoffs, since modes smaller than the IR modes are have wavelengths too high to perturb the electron and modes greater than the UV modes, have wavelengths that are too small compared to the atoms, which means that the idea of small perturbations on the electron does no longer apply. We define the cutoffs as:</p>
 
 \[k_{UV}=\frac{1}{\lambda_c}, \quad k_{IR}=\frac{1}{a_0}\]
 
@@ -431,7 +432,7 @@
 
 <p>Note that every single quantity in this expression is a known constant, and so plucking in all the constants gives you a reasonable order-of-magnitude value the change in energy due to empty space not being actually empty. Although this energy is a million times smaller than the ground energy of of Hydrogen which was stated earlier, it is a measurable change which acts a undeniable and irreputable proof that the vacuum is far from empty: it always jitters and its fingerprints are real and measurable. So we just proved by both theory and experiment, that even empty space, when quantized to a small enough scale, gives rise to fluctuations. If you constrain something to a small enough volume, the Heisenberg Uncertainty Principle allows it to acquire enough energy to produce particle-anti particle pairs.</p>
 
-<p>I hope you learned something new from today’s blog, and I will be back soon with another interesting topic.</p>
+<p>I hope you learned something new from today’s blog, and I will be back soon with another interesting topic which is now, almost a century long mystery.</p>
 
 
         
