deploy: 812aacd59f897cbcb45c31ba26d6fe6c4ddd3bc8

--- a/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
+++ b/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
@@ -252,9 +252,9 @@
         
         <h2 id="introduction">Introduction</h2>
 
-<p>Today we will unravel the fact that in physics, there is no such thing as empty space. What we like to call “empty” is teeming with activity and fluctuations at the quantum scales. This is not just theory, but has measurable consequences, all of which we will get into as we go forward, so enjoy the adventure. You will need a grasp of basic Quantum Mechanics, Electromagnetic Thoery and a bit of Atomic and Moledular Physics to go with that.</p>
+<p>Today we will unravel the fact that in physics, there is no such thing as empty space. What we like to call “empty” is teeming with activity and fluctuations at the quantum scales. This is not just theory, but has measurable consequences, all of which we will get into as we go forward, so enjoy the adventure. You will need a grasp of basic Quantum Mechanics, Electromagnetic Theory and a bit of Atomic and Molecular Physics to go with that.</p>
 
-<p>Our understanding of the atom was a hot topic for physicists in the early 1900s, with J.J Thompson’s famous “fruitcake” model, where the atom was assumed to be a smooth and filled sphere of positive charge, with clumps of negative charges embedded in it.  In 1911, Ernest Rutherford devised the most accurate atomic model known to man, backed by an experiment, where a minority of alpha particles were observed to scatter off at large angles when targeted at a thin foil of gold. This showed that an atom was mostly empty space with a lot of its mass being concentrated at the center, leading to such dramatic scattering. This center with positive charge is known as a nucleus, with negative electrons orbiting around it.</p>
+<p>Our understanding of the atom was a hot topic for physicists in the early 1900s, with J.J. Thompson’s famous “fruitcake” model, where the atom was assumed to be a smooth and filled sphere of positive charge, with clumps of negative charges embedded in it.  In 1911, Ernest Rutherford devised the most accurate atomic model known to man, backed by an experiment, where a minority of alpha particles were observed to scatter off at large angles when targeted at a thin foil of gold. This showed that an atom was mostly empty space with a lot of its mass being concentrated at the center, leading to such dramatic scattering. This center with positive charge is known as a nucleus, with negative electrons orbiting around it.</p>
 
 <h2 id="the-empty-space-in-an-atom">The Empty Space in an Atom</h2>
 
@@ -262,7 +262,7 @@
 
 \[\frac{\frac{4 \pi (r_a)^3}{3}}{\frac{4 \pi (r_n)^3}{3}}=\frac{r_a^3}{r_n^3} \approx (\frac{10^{-10}}{10^{-15}})^3 \approx 10^{15}\]
 
-<p>This tell us that the atom is almost completely empty. To  give you an idea of the magnitude of this ratio, its like if the atom was the size of a football field, the nucleus would be a cherry placed in its center. Now, let’s dive into the deep end. If I claimed that there is no such thing as empty space, that what is actually going on in that space?</p>
+<p>This tells us that the atom is almost completely empty. To  give you an idea of the magnitude of this ratio, its like if the atom was the size of a football field, the nucleus would be a cherry placed in its center. Now, let’s dive into the deep end. If I claimed that there is no such thing as empty space, that what is actually going on in that space?</p>
 
 <p>To understand this, we will view the atom from the lens of Quantum Field Theory (QFT).</p>
 
@@ -272,7 +272,7 @@
 
 \[\left[-\frac{\hbar^2}{2m} \nabla^2 - \frac{e^2}{4\pi \varepsilon_0 r} \right] \psi = E \psi\]
 
-<p>This \(\psi\) acts like a probability that is distributed throughout empty space, which do not locate the electron exactly, but rather give the probability of where we are likely to find it. As it turns out, the resulting \(\psi\) leads to discrete energy levels which keep the atom stable, and the electrons energy constant, with different energies corresponding to different shells. While all this points to the fact that empty space is not truly empty due to a probability being smeared all across it, the real game-changer is the addition of special relativity and relativistic quantum mechanics.</p>
+<p>This \(\psi\) acts like a probability that is distributed throughout empty space, which do not locate the electron exactly, but rather give the probability of where we are likely to find it. As it turns out, the resulting \(\psi\) leads to discrete energy levels which keep the atom stable, and the electron’s energy constant, with different energies corresponding to different shells. While all this points to the fact that empty space is not truly empty due to a probability being smeared all across it, the real game-changer is the addition of special relativity and relativistic quantum mechanics.</p>
 
 <h2 id="particles-in-a-contracting-box">Particles in a Contracting Box</h2>
 
@@ -296,7 +296,7 @@
   <br /><em>Figure 1: Vacuum fluctuations appearing and disappearing within the “empty” region of the atom</em>
 </p>
 
-<p>It becomes apparent that \(10^{-13}m\) is bigger than the radius of the nucleus but smaller then that of the atom, hence making the “empty” space inside the atom an ideal environment for effects to occur, as shown in the figure. The nucleus is not drawn to scale; the scale that was mentioned earlier (Cherry to a football field).</p>
+<p>It becomes apparent that \(10^{-13}m\) is bigger than the radius of the nucleus but smaller then that of the atom, hence, making the “empty” space inside the atom an ideal environment for effects to occur, as shown in the figure. The nucleus is not drawn to scale; the scale that was mentioned earlier (Cherry to a football field).</p>
 
 <p>So, we have seen that in the case of an atom, the electron can be confined to a region where the quantum mechanical picture becomes fuzzy. Beyond this, ordinary quantum mechanics breaks down, and we require another way to understand the atom. This is where Quantum Field Theory (QFT) can play a part, but do not be overwhelmed by the fancy name…it is a lot more simple than it sounds. In the QFT interpretation, fields are fundamental, not particles. Particles are simply localized excitation in fields that permeate through space. Using QFT allows us to study the atom from a field perspective, which aids in making sense of the situation. In order to detect the consequences of the restless empty space on atomic energies, we need to determine a consequence of these quantum effects. To detect QFT’s effects, we first need to establish what happens without them.</p>
 
@@ -334,7 +334,7 @@
 
 \[u=\frac{\epsilon_0|\epsilon_k|^2}{2}\]
 
-<p>\(\epsilon_k\) is the root mean square amplitude of the electric field associated with k. Note that the magnetic field is not mentioned since its weaker than the electron field by a factor of c, the speed to light. The energy is simply the product of energy density and volume. Assuming our confining box has length a, we get:</p>
+<p>\(\epsilon_k\) is the root mean square amplitude of the electric field associated with k. Note that the magnetic field is not mentioned since its weaker than the electron field by a factor of c. The energy is simply the product of energy density and volume. Assuming our confining box has length a, we get:</p>
 
 \[E_{vac}=ua^3=\frac{\epsilon_0|\epsilon_k|^2a^3}{2}\]
 
@@ -354,7 +354,7 @@
 
 <h2 id="the-lamb-shift">The Lamb Shift</h2>
 
-<p>This subtle change in the electrons probability distribution leads to a shift in its energy levels, in what is referred to as “The Lamb Shift”. If you bear with me a little longer, we can get into how we can quantify it for our Hydrogen atom. Let’s first study the shift caused by one mode, with spatial wave-vector k and frequency \(\omega_k\), on an electron. The force experienced by the electron due to an electric field is given by:</p>
+<p>This subtle change in the electron’s probability distribution leads to a shift in its energy levels, in what is referred to as “The Lamb Shift”. If you bear with me a little longer, we can get into how we can quantify it for our Hydrogen atom. Let’s first study the shift caused by one mode, with spatial wave-vector k and frequency \(\omega_k\), on an electron. The force experienced by the electron due to an electric field is given by:</p>
 
 \[F=m_ea=e\epsilon\]
 
@@ -438,7 +438,7 @@
 
 \[\Delta E=\frac{e^2}{12\pi \epsilon_0a_0^3}\frac{\pi^2\hbar e^2}{8m^2\epsilon_0c^3}In\left(\frac{1}{\alpha}\right)\approx5 \times10^{-5} eV\]
 
-<p>Note that every single quantity in this expression is a known constant, and so plucking in all the constants gives you a reasonable order-of-magnitude value the change in energy due to empty space not being actually empty. Although this energy is a million times smaller than the ground energy of of Hydrogen which was stated earlier, it is a measurable change which acts a undeniable and irreputable proof that the vacuum is far from empty: it always jitters and its fingerprints are real and measurable. So we just proved by both theory and experiment, that even empty space, when quantized to a small enough scale, gives rise to fluctuations. If you constrain something to a small enough volume, the Heisenberg Uncertainty Principle allows it to acquire enough energy to produce particle-anti particle pairs.</p>
+<p>Note that every single quantity in this expression is a known constant, and so plucking in all the constants gives you a reasonable order-of-magnitude value the change in energy due to empty space not being actually empty. Although this energy is a million times smaller than the ground energy of Hydrogen which was stated earlier, it is a measurable change which acts a undeniable and irrefutable proof that the vacuum is far from empty: it always jitters and its fingerprints are real and measurable. So we just proved by both theory and experiment, that even empty space when quantized to a small enough scale, gives rise to fluctuations. If you constrain something to a small enough volume, the Heisenberg Uncertainty Principle allows it to acquire enough energy to produce particle-anti particle pairs.</p>
 
 <p>I hope you learned something new from today’s blog, and I will be back soon with another interesting topic which is now, almost a century long mystery.</p>
 
