deploy: c6c62aec994021bb12b5292a38a704ab00abed44

--- a/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
+++ b/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
@@ -352,6 +352,10 @@
 
 \[\lambda_n=\frac{2L}{n}\]
 
+<p><img src="/assets/images/allowedphi.png" alt="Figure 2" /></p>
+
+<p><strong>Figure 2</strong>: The only allowed wavefunctions for a particle confined to a box</p>
+
 <p>The edges (where probability disappears) are called modes, which have distinct spatial and temporal frequencies. n is an integer value and L is the length of the constraining box. The wavenumber k (spatial frequency) is given by \(k=\frac{2 \pi}{\lambda}\), which results in:</p>
 
 \[k=\frac{\pi n}{L}\]
@@ -366,8 +370,15 @@
 
 <h2 id="the-qft-treatment">The QFT Treatment</h2>
 
-<p>Quantum Field Theory pictures a field as infinite coupled modes, each acting as harmonic oscillators. 
-The minimum energy of a quantum harmonic oscillator is, unlike classical oscillators, non zero due to the Heisenberg Uncertainty Principle. Why am I blaming HUP for this? Well, picture this…</p>
+<p>Quantum Field Theory pictures a field as infinite coupled modes, each acting as harmonic oscillators.</p>
+
+<!-- Animation of the QFT Interpretation -->
+<p align="center">
+  <img src="/assets/images/Adobe Express - QFTPlaneCoupled (1).gif" width="500" alt="Vacuum fluctuations inside the atom" />
+  <br /><em>Simulation 2: A visualization of a quantized fields comprised of coupled modes acting as harmonic oscillators</em>
+</p>
+
+<p>One can think of the simulation above as a dynamic 3D extension of figure 2. The minimum energy of a quantum harmonic oscillator is, unlike classical oscillators, non zero due to the Heisenberg Uncertainty Principle. Why am I blaming HUP for this? Well, picture this…</p>
 
 <p>A classical oscillator (like a pendulum) can sit at zero kinteic energy. As a matter of fact, that is exactly what happens if you don’t keep on applying a force to it since it loses energy to the environment. BUT, why can’t a quantum harmonic oscillator do the same? Thats because if its stationary, we know its position with certainty, and its momentum with certainty (zero). And since, HUP must be obeyed by the particles at the quantum scale, this can not happen. So when, \(\Delta x\) becomes small, the uncertainties in momentum are a source of maintaining a minimum energy, and vice vera. Hopefully, that makes sense intuitively. Now, let’s have it make sense mathematically.</p>
 
@@ -386,9 +397,9 @@ The minimum energy of a quantum harmonic oscillator is, unlike classical oscilla
 \[E \approx \frac{(\Delta p)^2}{2m} + \frac{1}{2} m \omega^2 (\Delta x)^2
 = \frac{\hbar^2}{8 m (\Delta x)^2} + \frac{1}{2} m \omega^2 (\Delta x)^2.\]
 
-<p><img src="/assets/images/QHOGS.png" alt="Figure 2" /></p>
+<p><img src="/assets/images/QHOGS.png" alt="Figure 3" /></p>
 
-<p><strong>Figure 2</strong>: The energy as a function of distance for the quantum harmonic oscillator.</p>
+<p><strong>Figure 3</strong>: The energy as a function of distance for the quantum harmonic oscillator.</p>
 
 <p>This gives the total energy as a function of \(\Delta x\). To find the minimum, differentiate with respect to \(\Delta x\) and set the derivative to zero:</p>
 
