--- a/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
+++ b/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
@@ -252,7 +252,7 @@
         
         <h2 id="introduction">Introduction</h2>
 
-<p>Today we will unravel the fact that in physics, there is no such thing as empty space. What we like to call “empty” is teeming with activity and fluctuations at the quantum scales. This is not just theory, but has measurable consequences, all of which we will get into as we go forward, so enjoy the adventure. You will need a grasp of basic Quantum Mechanics, Electromagnetic Theory and a bit of Atomic and Molecular Physics to go with that.</p>
+<p>Today we will unravel the idea that in physics, there is no such thing as empty space. What we like to call “empty” is teeming with activity and fluctuations at the quantum scales. This is not just theory, but has measurable consequences, all of which we will get into as we go forward, so enjoy the adventure. You will need a grasp of basic quantum mechanics, electromagnetic theory and a bit of atomic and molecular physics to go with that.</p>
 
 <p>Our understanding of the atom was a hot topic for physicists in the early 1900s, with J.J. Thompson’s famous “fruitcake” model, where the atom was assumed to be a smooth and filled sphere of positive charge, with clumps of negative charges embedded in it.  In 1911, Ernest Rutherford devised the most accurate atomic model known to man, backed by an experiment, where a minority of alpha particles were observed to scatter off at large angles when targeted at a thin foil of gold. This showed that an atom was mostly empty space with a lot of its mass being concentrated at the center, leading to such dramatic scattering. This center with positive charge is known as a nucleus, with negative electrons orbiting around it.</p>
 
@@ -288,7 +288,7 @@
 
 \[\Delta x=\frac{\hbar}{2m_ec} \approx 10^{-13}m\]
 
-<p>So this means that if I were to constrain anything within \(10^{-13}m\), which is the case in an aton, the correct characteristic energy can match a critical value of 1.02 MeV, which is the energy required to produce the positron-electron pair, setting the stage for jitters within the atom.</p>
+<p>So this means that if I were to constrain anything within \(10^{-13}m\), which is the case in an atom, the correct characteristic energy can match a critical value of 1.02 MeV, which is the energy required to produce the positron-electron pair, setting the stage for jitters within the atom.</p>
 
 <!-- Animation of vacuum fluctuations -->
 <p align="center">
