deploy: 96843f22847cd6e4cde36b880d816be0ad12cd0e

--- a/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
+++ b/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
@@ -380,7 +380,7 @@
   <br /><em>Simulation 3: A visualization of a quantized fields comprised of coupled modes acting as harmonic oscillators</em>
 </p>
 
-<p>One can think of the simulation above as a dynamic 3D extension of figure 2. The minimum energy of a quantum harmonic oscillator is, unlike classical oscillators, non zero due to the Heisenberg Uncertainty Principle. Why am I blaming HUP for this? Well, picture this…</p>
+<p>One can think of simulation 3 above as a 3D extension of simulation 2. The minimum energy of a quantum harmonic oscillator is, unlike classical oscillators, non zero due to the Heisenberg Uncertainty Principle. Why am I blaming HUP for this? Well, picture this…</p>
 
 <p>A classical oscillator (like a pendulum) can sit at zero kinteic energy. As a matter of fact, that is exactly what happens if you don’t keep on applying a force to it since it loses energy to the environment. BUT, why can’t a quantum harmonic oscillator do the same? Thats because if its stationary, we know its position with certainty, and its momentum with certainty (zero). And since, HUP must be obeyed by the particles at the quantum scale, this can not happen. So when, \(\Delta x\) becomes small, the uncertainties in momentum are a source of maintaining a minimum energy, and vice vera. Hopefully, that makes sense intuitively. Now, let’s have it make sense mathematically.</p>
 
