--- a/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
+++ b/quantum field theory/relativistic quantum mechanics/particle physics/atomic and molecular physics/inside-the-atom-where-empty-space-teems-with-activity/index.html
@@ -306,7 +306,7 @@
 
 \[E \approx K + U\]
 
-<p>I say approximately here since this is thhe non-relativistic treatment and has it’s shortcomings as we discussed in the previous blog. Here the kinetic energy \(K\) is given by</p>
+<p>I say approximately here since this is the non-relativistic treatment and has it’s shortcomings as we discussed in the previous blog. Here the kinetic energy \(K\) is given by</p>
 
 \[K = \frac{(\Delta p)^2}{2 m_e}\]
 
@@ -358,7 +358,7 @@
   <br /><em>Simulation 2: A dynamic visualization of the allowed wavefunctions that disappear at boundaries resulting in modes</em>
 </p>
 
-<p>The edges (where probability disappears) are called modes, which have distinct spatial and temporal frequencies. n is an integer value and L is the length of the constraining box. The wavenumber k (spatial frequency) is given by \(k=\frac{2 \pi}{\lambda}\), which results in:</p>
+<p>The edges (where probability disappears) are called nodes, which have distinct spatial and temporal frequencies. n is an integer value and L is the length of the constraining box. The wavenumber k (spatial frequency) is given by \(k=\frac{2 \pi}{\lambda}\), which results in:</p>
 
 \[k=\frac{\pi n}{L}\]
 
