deploy: e91e7353cd83141e376a1f81df3a08342f0013fa

--- a/cosmology/astronomy/particle physics/astrophysics/Measuring-the-universe/index.html
+++ b/cosmology/astronomy/particle physics/astrophysics/Measuring-the-universe/index.html
@@ -270,7 +270,7 @@ Unfortunately, your eyes are too close for this method to work on distant stars,
 The idea is to leverage the distance traveled by the Earth, in order to attain a large enough angle such that it is measurable. After 6 months, the Earth is on the other side of the Sun, implying that the “distance between our eyes” is 2 Astronomical Units (AU) in-between the stellar snapshots, where AU is the distance between the Earth and the Sun. This makes sense in the diagram shown below.</p>
 
 <p>Consider a nearby star observed from Earth at two opposite points in its orbit around the Sun, six months apart. The baseline of this observation is the diameter of Earth’s orbit, which is 2 AU, giving a right triangle with a baseline of 1 AU, distance to the star (d), and Parallax angle (p), measured in arcseconds which is about
-$ \frac{1}{3600} $ of a degree.</p>
+(\frac{1}{3600}) of a degree.</p>
 
 <p><img src="/assets/images/ParallaxDiagram_ManimCE_v0.19.0.png" alt="Figure 1" /></p>
 
